--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "lodash": "^1.0.1",
+    "node-emoji": "^1.8.1",
     "nodemon": "^1.17.5"
   }
 }
